static/css/style.css
/* ... */
body {
    color: var(--text-light);
    background: #202020 url('/media/svg/bg-swirl.svg') no-repeat center center fixed;
    background-size: cover;
    font-family: 'Quicksand', Arial, Helvetica, sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    font-family: 'Baloo 2', Arial, Helvetica, sans-serif;
}

a {
    color: var(--brand-primary-color);
    text-decoration: none;
}

a:hover {
    color: var(--brand-primary-color);
    text-decoration: underline;
}

.bg-dark,
.dropdown-menu-dark {
    background-color: var(--bg-dark) !important;
}

a:focus-visible,
.tool-button:focus-visible {
    outline: 1px solid;
    outline-color: var(--brand-primary-color);
}

.btn-brand-primary {
    font-family: 'Baloo 2', Arial, Helvetica, sans-serif;
    font-weight: bold;
    font-size: 1.2rem;
    color: var(--text-dark);
    background-color: var(--bg-grey);
    border: none;
    transition: 0.3s ease-in-out;
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
}

.btn-brand-primary:hover {
    color: var(--text-dark);
    background-color: var(--brand-primary-color);
    border-color: var(--brand-primary-color);
    box-shadow: 0 3px 3px 0 rgba(0, 0, 0, 0.14), 0 1px 7px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -1px rgba(0, 0, 0, 0.2);
}

.btn-brand-primary:focus {
    color: var(--text-dark);
    background-color: var(--brand-primary-color);
    border-color: var(--brand-primary-color);
    box-shadow: 0 0 0 .25rem rgba(130,138,145,.5);
}

.btn-brand-primary:focus-visible {
    box-shadow: 0 0 0 .25rem rgba(130,138,145,.5)
}

.btn-check:active + .btn-brand-primary,
.btn-check:checked + .btn-brand-primary,
.btn-brand-primary.active,
.btn-brand-primary:active,
.show > .btn-brand-primary.dropdown-toggle {
    color: var(--text-dark);
    background-color: var(--brand-primary-color);
    border-color: var(--brand-primary-color);
}

.btn-check:focus + .btn-brand-primary,
.btn-check:active + .btn-brand-primary:focus-visible {
    box-shadow: 0 0 0 .25rem rgba(130,138,145,.5)
}

.btn {
    font-family: 'Baloo 2', Arial, Helvetica, sans-serif;
}

.btn-danger {
    color: #fff;
    background-color: var(--bs-danger-alt);
    border-color: var(--bs-danger-alt);
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
}

.btn-danger:hover {
    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14),0 1px 7px 0 rgba(0,0,0,0.12),0 3px 1px -1px rgba(0,0,0,0.2);
    background-color: var(--bs-danger);
    border-color: var(--bs-danger);
}

.btn-danger:focus {
    box-shadow: 0 0 0 .25rem rgba(130,138,145,.5);
    background-color: var(--bs-danger);
    border-color: var(--bs-danger);
}

.btn-secondary {
    color: #fff;
    background-color: var(--bs-seconadry-alt);
    border-color: var(--bs-seconadry-alt);
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
}

.btn-secondary:hover {
    box-shadow: 0 3px 3px 0 rgba(0,0,0,0.14),0 1px 7px 0 rgba(0,0,0,0.12),0 3px 1px -1px rgba(0,0,0,0.2);
    background-color: var(--bs-secondary);
    border-color: var(--bs-secondary);
}

.btn-secondary:focus {
    box-shadow: 0 0 0 .25rem rgba(130,138,145,.5);
    background-color: var(--bs-secondary);
    border-color: var(--bs-secondary);
}

/* NAVBAR STYLES */

.navbar-logo-text,
.navbar-logo-icon {
    height: 50px;
}

.navbar-dark .navbar-nav .nav-link {
    color: var(--muted-text-light);
}

.navbar-dark .navbar-nav .nav-link:hover {
    color: var(--text-light);
}

/* FOOTER STYLES */

footer {
    color: var(--muted-text-light);
    box-shadow: 0 -.5rem 1rem rgba(0, 0, 0, .15) !important;
}

/* MODAL STYLES */

.modal-content {
    background-color: #303030ef;
    border: 2px solid var(--border-grey);
}

.modal-header {
    border-bottom: 2px solid var(--border-grey);
}

.modal-footer {
    border-top: 2px solid var(--border-grey);
}

/* SKETCHBOOK STYLES */

.control-panel {
    box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14), 0 6px 30px 5px rgba(0, 0, 0, 0.12), 0 8px 10px -7px rgba(0, 0, 0, 0.2);
    background-color: #30303075;
}

.drawing-prompt-box {
    background-color: var(--bg-light);
    border: 2px solid var(--border-grey);
    border-radius: 5px;
    color: var(--text-dark);
}

/* flex grids for buttons */

.flex-wrap-holder {
    display: flex;
    flex-wrap: wrap;
}

.prompt-button {
    flex-basis: calc(50% - 4px);
    margin: 2px;
}

.control-button {
    flex-basis: calc(50% - 4px);
    margin: 2px;
}

.settings-button {
    font-size: 1rem;
    flex-basis: calc(50% - 4px);
    margin: 2px;
}

/* drawing canvas */

#sketchbook-background {
    height: 980px;
    width: 1340px;
    background-image: url("/media/svg/sketchbook-background.svg");
}

#sketchbook {
    position: absolute;
    top: 110px;
    left: 30px;
    cursor: crosshair;
    touch-action: none;
}


.plain-paper {
    background-image: none;
}

.watermarked-paper {
    background-image: url("/media/svg/watermark.svg");
}

/* Information on generating paper backgrounds with CSS gradients found in this thread:
 https://stackoverflow.com/questions/3540194/how-to-make-a-grid-like-graph-paper-grid-with-just-css */

 .lined-paper {
    background-size: 20px 30px;
    background-image:
        linear-gradient(to bottom, rgb(147, 163, 255) 1px, transparent 2px);
}

.squared-paper {
    background-size: 20px 20px;
    background-image:
        linear-gradient(to right, rgb(176, 176, 176) 1px, transparent 1px),
        linear-gradient(to bottom, rgb(176, 176, 176) 1px, transparent 1px);
}

/* canvas cursor preview */

.cursor-holder {
    height: 50px;
    width: 50px;
    border: 5px var(--bg-grey) solid;
    border-radius: 50%;
    transform-origin: center;
}

#cursor {
    width: 20px;
    height: 20px;
    border-radius: 50%;
    background-color: #FEB450;
}
/* ... */

